# LightFieldMicroscopy_PC-bzip2

./: CMakeLists.txt  README.md
javaWrapper/: README.md  pom.xml
javaWrapper/src/main/java/org/janelia/simview/lfm/: LFM.java  LFMImageJLoader.java  LFMJNI.java  LFMScifio.java
javaWrapper/src/main/java/org/janelia/simview/util/: NativeLibraryLoader.java
javaWrapper/src/main/resources/native/amd64-windows/: lfm-jni.lib
matlabWrapper/: compileMex.m  readLFMheader.cpp  readLFMheader.m  readLFMheader.mexw64  readLFMstack.cpp  readLFMstack.m  readLFMstack.mexw64  test.m  writeLFMstack.cpp  writeLFMstack.m  writeLFMstack.mexw64
src/: CMakeLists.txt  common.h  klb_Cwrapper.cpp  klb_imageHeader.cpp  klb_imageHeader.h  klb_imageIO.cpp  klb_imageIO.h  lfm_Predictors.cu  lfm_Predictors.h  lfm_Predictors_angle.cu  lfm_Predictors_angle.h  lfm_Predictors_space.cu  lfm_Predictors_space.h
src/jni/: CMakeLists.txt  org_janelia_simview_lfm_LFMJNI.cpp  org_janelia_simview_lfm_LFMJNI.h
test/: CMakeLists.txt  mainTest_lfmIO.cxx
